--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 	"author": "Danilo Uema",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.3.4",
 		"body-parser": "^1.19.0",
 		"connect-mongo": "^3.1.2",
+		"dotenv": "^16.0.3",
 		"edge-js": "^16.6.0",
 		"exceljs": "^4.2.1",
 		"express": "^4.17.1",
@@ -21,4 +23,3 @@
 		"socket.io": "^2.3.0"
 	}
 }
-
